(chores) camel-azure-storage-datalake: use unmodifiable list when possible